--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Portfolio of Mohammad Rohaan - BSCS student, AI/ML enthusiast, and robotics developer. Explore projects in .NET, C++, embedded systems, and more.">
 <meta name="keywords" content="Mohammad Rohaan, BSCS, FAST University, AI, ML DL CV, robotics, .NET, C++, SQL Server, portfolio, projects">
 <meta name="author" content="Mohammad Rohaan">
+<meta name="google-site-verification" content="5qgRH-d4GEgz-TY52U-Kio-u7rVGZoGSAunDYnG436s" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Mohammad Rohaan Portfolio" />
 <meta property="og:type" content="website" />
