--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Hero with Background & Profile -->
   <header class="hero" style="background-image: url('images/background2.jpg');">
     <div class="overlay"></div>
-    <img class="profile-pic" src="/images/profile.jpg" alt="Profile Rohaan">
+    <img class="profile-pic" src="/images/profile.jpg" alt="Profile Mohammad Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle">BSCS Student • AI/ML • Neural Networks & Robotics Enthusiast</p>
     <a href="#about" class="hero-btn">Explore My Work</a>
