--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <link rel="preload">
   <title>Mohammad Rohaan | Portfolio</title>
+    <link rel="icon" href="images/icon6.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="style.css?v=1.1" />
