--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <meta name="twitter:description" content="Explore the portfolio of Mohammad Rohaan, a BSCS student at FAST University Islamabad, specializing in AI/ML, robotics, and software development. Discover projects in .NET, C++, embedded systems, and more." />
 <meta name="twitter:image" content="images/profile.jpg" />
   <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <link rel="preload">
@@ -44,7 +43,7 @@
   <!-- Hero with Background & Profile -->
   <header class="hero" style="background-image: url('images/background2.jpg');">
     <div class="overlay"></div>
-    <img class="profile-pic" src="images/profile1.jpg" alt="Profile Rohaan">
+    <img class="profile-pic" src="images/profile.JPG" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle">BSCS Student • AI/ML • Neural Networks & Robotics Enthusiast</p>
     <a href="#about" class="hero-btn">Explore My Work</a>
