--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
   <section id="about" class="container section">
     <h2>About Me</h2>
     <p class="about-text">
-I’m a driven 6th-semester BSCS student at FAST University Islamabad, passionate about leveraging
- technology to solve real-world challenges. Proficient in C, C++, C#, Web_Dev, Python(Beginners), JavaScript(Beginners), Assembly x86, and SQL
-  Server, I’ve built diverse projects, including a Travel Ease System in .NET, a Git Lite using
-   advanced DSA concepts, and synchronized robotic cars with Python and Arduino. My coursework
-    in Robotics Technology and hands-on experience with MATLAB, forward/inverse kinematics, and
-     embedded systems fuel my interest in AI, deep learning, and computer vision. I’m eager to
-      contribute to innovative solutions in AI, robotics, and data science while continuously
-       expanding my expertise in emerging technologies.    </p>
+
+As a highly motivated 6th-semester BSCS student at FAST National University of Computer and Emerging Sciences, Islamabad, I am deeply passionate about harnessing cutting-edge technologies to address complex real-world challenges. My technical proficiency spans a robust array of programming languages and tools, including C, C++, C#, Python (beginner), JavaScript (beginner), Assembly x86, and SQL Server, complemented by hands-on expertise in web development and embedded systems. My academic journey and project portfolio reflect a strong commitment to innovation, problem-solving, and interdisciplinary application of computer science principles.
+
+I have successfully developed impactful projects that showcase my technical versatility and analytical mindset. Notable among them is the Travel Ease System, a comprehensive .NET-based application designed to streamline travel planning with an intuitive user interface and efficient backend processing. Another highlight is Git Lite, a lightweight version control system I built from scratch, leveraging advanced Data Structures and Algorithms (DSA) concepts to ensure optimal performance and scalability. Additionally, I engineered synchronized robotic cars using Python and Arduino, integrating real-time communication protocols and sensor data processing to achieve seamless coordination—an endeavor that deepened my understanding of embedded systems and IoT.
+
+My coursework in Robotics Technology has been a cornerstone of my academic growth, equipping me with proficiency in MATLAB, forward and inverse kinematics, and robotic motion planning. These skills, combined with practical experience in embedded systems design, have ignited my enthusiasm for AI, deep learning, and computer vision. I am particularly fascinated by the potential of these fields to revolutionize industries, from autonomous systems to intelligent data analytics. My foundational knowledge in Python and JavaScript positions me to rapidly advance in machine learning frameworks and web-based AI applications.
+
+Beyond technical expertise, I am a proactive learner, consistently seeking opportunities to expand my skill set in emerging technologies such as data science, cloud computing, and neural networks. I thrive in collaborative environments, drawing on strong problem-solving skills and a creative approach to develop innovative solutions. My goal is to contribute meaningfully to interdisciplinary projects in AI, robotics, and data-driven technologies, while continuously pushing the boundaries of my expertise to drive transformative impact in the tech landscape.   
+
+</p>
   </section>
 
 
@@ -87,6 +89,7 @@ I’m a driven 6th-semester BSCS student at FAST University Islamabad, passionat
     <span>UNITY(BEGINNERS)</span>
      <span>CIRCUIT ANALYSIS</span>
        <span>SHELL SCRIPTING</span>
+
     </div>
   </section>
 
