--- a/index.html
+++ b/index.html
@@ -1993,6 +1993,15 @@ window.addEventListener('scroll', () => {
   }
 });
 
+window.addEventListener("scroll", function () {
+  const navbar = document.querySelector(".navbar");
+  if (window.scrollY > 10) {
+    navbar.classList.add("scrolled");
+  } else {
+    navbar.classList.remove("scrolled");
+  }
+});
+
 
   </script>
 </body>
