--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Mohammad Rohaan Portfolio" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="images/profile.jpg" />
+<meta property="og:image" content="images/resume_img_2.png" />
 <meta property="og:url" content="yourwebsite.com" />
 <meta property="og:description" content="Explore the portfolio of Mohammad Rohaan, a BSCS student at FAST University Islamabad, specializing in AI/ML, robotics, and software development. Discover projects in .NET, C++, embedded systems, and more." />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Mohammad Rohaan Portfolio" />
 <meta name="twitter:description" content="Explore the portfolio of Mohammad Rohaan, a BSCS student at FAST University Islamabad, specializing in AI/ML, robotics, and software development. Discover projects in .NET, C++, embedded systems, and more." />
-<meta name="twitter:image" content="images/profile.jpg" />
+<meta name="twitter:image" content="images/resume_img_2.png" />
   <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
@@ -43,7 +43,7 @@
   <!-- Hero with Background & Profile -->
   <header class="hero" style="background-image: url('images/background2.jpg');">
     <div class="overlay"></div>
-    <img class="profile-pic" src="images/profile.JPG" alt="Profile Rohaan">
+    <img class="profile-pic" src="images/resume_img_2.png" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle">BSCS Student • AI/ML • Neural Networks & Robotics Enthusiast</p>
     <a href="#about" class="hero-btn">Explore My Work</a>
@@ -1993,14 +1993,6 @@ window.addEventListener('scroll', () => {
   }
 });
 
-window.addEventListener("scroll", function () {
-  const navbar = document.querySelector(".navbar");
-  if (window.scrollY > 10) {
-    navbar.classList.add("scrolled");
-  } else {
-    navbar.classList.remove("scrolled");
-  }
-});
 
 
   </script>
