--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img class="profile-pic" src="images/resume_img_2.png" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle">BSCS Student • AI/ML • Neural Networks & Robotics Enthusiast</p>
-    <a href="#about" class="hero-btn">Explore My Work23</a>
+    <a href="#about" class="hero-btn">Explore My Work</a>
   </header>
 
   <!-- About Section -->
@@ -1850,8 +1850,8 @@ Beyond technical expertise, I am a proactive learner, consistently seeking oppor
 <!-- Footer -->
 <footer style="background-color: #1a1a1a; color: #f0f0f0; padding: 10px 0; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-top: 2px solid #444;">
   <div class="container">
-    <p style="margin: 0; font-size: 25px;">&copy; 2025 <strong>Mohammad Rohaan</strong>. All rights reserved.</p>
-    <p style="margin: 5px 0 10px; font-size: 20px;">Crafted with passion and precision. Powered by Mr.Dev and www.CodeTechTeams.com</p>
+    <p class ="f1"  >&copy; 2025 <strong>Mohammad Rohaan</strong>. All rights reserved.</p>
+    <p class = "f2" >Crafted with passion and precision. Powered by Mr.Dev and www.CodeTechTeams.com</p>
 
   </footer>
 
