--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Beyond technical expertise, I am a proactive learner, consistently seeking oppor
 <section id="resume" class="container section">
   <div class="container">
     <h2>Resume</h2>
-    <button class="resume-button" onclick="toggleResume()">View My Resume1</button>
+    <button class="resume-button" onclick="toggleResume()">View My Resume</button>
   </div>
 </section>
 
