--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="overlay"></div>
     <img class="profile-pic" src="images/resume_img_2.png" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
-    <p class="hero-subtitle">BSCS Student • AI/ML • Neural Networks & Robotics Enthusiast</p>
+    <p class="hero-subtitle">&nbsp;&nbsp; BSCS Student &nbsp;• AI/ML &nbsp;&nbsp; • Neural Networks & Robotics Enthusiast</p>
     <a href="#about" class="hero-btn">Explore My Work</a>
   </header>
 
