--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img class="profile-pic" src="images/resume_img_2.png" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle"> BSCS Student • AI/ML  • Neural Networks & Robotics Enthusiast</p>
-    <a href="#about" class="hero-btn">Explore My Work1</a>
+    <a href="#about" class="hero-btn">Explore My Work</a>
   </header>
 
   <!-- About Section -->
