--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Beyond technical expertise, I am a proactive learner, consistently seeking oppor
   <!-- Resume Section -->
 <section id="resume" class="container section">
   <div class="container">
-    <h2>Resume</h2>
+    <h2>My Resume</h2>
     <button class="resume-button" onclick="toggleResume()">View My Resume</button>
   </div>
 </section>
