--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="Mohammad Rohaan, BSCS, FAST University, AI, ML DL CV, robotics, .NET, C++, SQL Server, portfolio, projects">
 <meta name="author" content="Mohammad Rohaan">
 <meta name="google-site-verification" content="5qgRH-d4GEgz-TY52U-Kio-u7rVGZoGSAunDYnG436s" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Mohammad Rohaan Portfolio" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="images/resume_img_2.png" />
@@ -46,7 +46,7 @@
     <img class="profile-pic" src="images/resume_img_2.png" alt="Profile Rohaan">
     <h1 class="hero-title">Mohammad Rohaan</h1>
     <p class="hero-subtitle"> BSCS Student • AI/ML  • Neural Networks & Robotics Enthusiast</p>
-    <a href="#about" class="hero-btn">Explore My Work1</a>
+    <a href="#about" class="hero-btn">Explore My Work</a>
   </header>
 
   <!-- About Section -->
