--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <link rel="stylesheet" href="style.css?v=1.1" />
 </head>
 <body>
+
+      <p style="color: transparent;">Mohammad Rohaan Portfolio 2327</p>
+
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
